Tue Nov  3 13:32:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Contexts/Swapping/*:
          Removed from the archive, swapping containers don't work and it will be a major
          job to reimplement this

Tue Nov  3 13:29:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Swapping/*:
          Removed from the archive, swapping containers don't work and it will be a major
          job to reimplement this

Tue Nov  3 13:27:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Session/Session_Container.h:
          Updated export macro

        * ciao/Containers/Session/Session_Container.mpc:
          Use seperate project for idl generation, generate no C.inl/S.cpp/S.inl but
          do generate an export file

        * ciao/Containers/Session/Session_Container_export.h:
          Removed, generated by TAO_IDL from now

Tue Nov  3 13:20:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/CIAO_Servant_Activator.mpc:
          Moved IDL generation into a seperate project so that we can generate the
          export file

        * ciao/Containers/CIAO_Servant_Activator_export.h:
          Removed, generated by TAO_IDL from now

        * ciao/Containers/Servant_Activator.h:
          Updated export macro

        * ciao/Containers/Swapping/*:
          Removed from the archive, swapping containers don't work and it will be a major
          job to reimplement this

Tue Nov  3 13:06:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ServerActivator_Impl.cpp:
          Small code fix

        * ciao/Containers/CIAO_Servant_Activator.mpc:
          Cleanup of this file and no need to generate C.inl file

        * ciao/Containers/Container_Base.h:
          Updated the export macro

        * ciao/Containers/Containers.mpc:
          Use a seperate project for the idl file which also generates the export
          file