@@ -1,17 +1,22 @@
 // $Id$
-project(CIAO_Port_Activator_stub) : portableserver, ciaoidldefaults, ciao_lib {
-   dynamicflags = CIAO_PORT_ACTIVATOR_BUILD_DLL
-   idlflags  += -Wb,stub_export_include=CIAO_Port_Activator_export.h
-   idlflags  += -Wb,stub_export_macro=CIAO_Port_Activator_Export
-   idlflags  += -SS
+project(CIAO_Port_Activator_stub_idl) : ciaoidldefaults {
+   custom_only = 1
+   idlflags  += -Wb,stub_export_include=CIAO_Port_Activator_export.h \
+                -Wb,stub_export_macro=CIAO_PORT_ACTIVATOR_Export \
+                -SS -Sci -Gxhst
    IDL_Files {
      CIAO_Port_Activator.idl
    }
+}
 
+project(CIAO_Port_Activator_stub) : portableserver, ciao_lib {
+   dynamicflags = CIAO_PORT_ACTIVATOR_BUILD_DLL
+   after += CIAO_Port_Activator_stub_idl
+   IDL_Files {
+   }
    Source_Files {
      CIAO_Port_ActivatorC.cpp
    }
-
    Header_Files {
    }
 }
