@@ -1,3 +1,15 @@
+Tue Nov  3 13:41:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Servants/CIAO_Port_Activator_export.h:
+          Removed, generated by TAO_IDL from now
+
+        * ciao/Servants/Home_Servant_Impl_T.h:
+          Doxygen changes
+
+        * ciao/Servants/Servants.mpc:
+          Use seperate project for idl generation, generate no C.inl but
+          do generate an export file
+
 Tue Nov  3 13:32:31 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Contexts/Swapping/*:
